стилизация с помощью bootstrap MyView and RsvpForm

--- a/PartyInvites/Views/Home/MyView.cshtml
+++ b/PartyInvites/Views/Home/MyView.cshtml
@@ -6,15 +6,17 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
-    <div>
-        @ViewBag.Start World(from the view)
-        <p> We' re going to have an exci ting party . <br />
-            (То do: sell i t better. Add pictures or something.)
-        </p>
+    <div class="text-center">
+        <h3>@ViewBag.Start World(from the view)</h3>
+        <h3>We' re going to have an exci ting party .</h3> 
+        <h4>And you are invited</h4>
+        <a class="btn btn-warning"
+           asp-action="RsvpForm">RSVP NOW</a>
+
         <! создаем ссылку на странице на другое отображение(страницу html RsvpForm)>
-        <a asp-action="RsvpForm">RSVP NOW</a>
     </div>
 </body>
 </html>
