--- a/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -6,31 +6,41 @@
     <meta name="viewport" content="width=device-width" />
     <title>RsvpForm</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body>
-    <form asp-action="RsvpForm" method="post">
-        <div asp-validation-summary="All"></div>
-        <p>
-            <label asp-for="Name">Your name</label>
-            <input asp-for="Name" />
-        </p>
-        <p>
-            <label asp-for="Email">Your Email</label>
-            <input asp-for="Email" />
-        </p>
-        <p>
-            <label asp-for="Phone">Your Phone</label>
-            <input asp-for="Phone" />
-        </p>
-        <p>
-            <label>Will you attend</label>
-            <select asp-for="WillAtend">
-                <option value="">Choose an option</option>
-                <option value="true">Yes, z will be there</option>
-                <option value="false">No, I can not come</option>
-            </select>
-        </p>
-        <button type="submit">Sublim RSVP</button>
-    </form>
+    <div class="card">
+        <div class="card-header text-center"><h4>RSVP</h4></div>
+        <div class="card-body">
+            <form class="p-xl-1" asp-action="RsvpForm" method="post">
+                <div asp-validation-summary="All"></div>
+                <div class="form-group">
+                    <label asp-for="Name">Your name</label>
+                    <input class="form-control" asp-for="Name" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Email">Your email</label>
+                    <input class="form-control" asp-for="Email" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Phone">Your phone</label>
+                    <input class="form-control" asp-for="Phone" />
+                </div>
+                <div class="form-group">
+                    <label>Will you attend</label>
+                    <select class="form-control" asp-for="WillAtend">
+                        <option value="">Choose an option</option>
+                        <option value="true">Yes, I will be there</option>
+                        <option value="false">No, I can not come</option>
+                    </select>
+                </div>
+                <div class="text-center">
+                    <button class="btn btn-danger" type="submit">
+                        Sublim RSVP
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
