--- a/PartyInvites/Views/Home/ListResponses.cshtml
+++ b/PartyInvites/Views/Home/ListResponses.cshtml
@@ -5,29 +5,32 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Responses</title>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
-    <h2>
-        Here is the list of peope attending the party!
-    </h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Phone</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach(PartyInvites.Models.GuestResponse r in Model)
-            {
-            <tr>
-                <td>@r.Name</td>
-                <td>@r.Email.</td>
-                <td>@r.Phone</td>
-            </tr>
-            }
-        </tbody>
-    </table>
+    <div class="card-body">
+        <h2>
+            Here is the list of peope attending the party!
+        </h2>
+        <table class="table table-sm table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (PartyInvites.Models.GuestResponse r in Model)
+                {
+                    <tr>
+                        <td>@r.Name</td>
+                        <td>@r.Email.</td>
+                        <td>@r.Phone</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
