--- a/PartyInvites/Views/Home/Thanks.cshtml
+++ b/PartyInvites/Views/Home/Thanks.cshtml
@@ -7,8 +7,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Thanks</title>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
-<body>
+<body class="text-center">
     <p>
         <h1>
             Thank you , @Model.Name
@@ -22,6 +23,6 @@
             @: Sorry to hear that you can not make it 
         }
     </p>
-    <p>Click <a asp-action="ListResponses">here</a> to see who is comming </p>
+    Click <a class="nav-link" asp-action="ListResponses">here</a> to see who is comming 
 </body>
 </html>
